feat(subscriptions): implement get article category subscribed for (#40)
- implement get article category subscribed functionality
- add pagination to articles

[Delivers #167512374]
